Using nn.Sequential

--- a/3_pytorch_classification.ipynb
+++ b/3_pytorch_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMnG2V1riB7mSM1UJqJbJfO",
+      "authorship_tag": "ABX9TyM9uMY/dwv4BwqX+38qQeP0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "CZH98HErE-Eo"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
       "metadata": {
         "id": "4FqclzRWFlnC"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -90,9 +90,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eQRArdk8Fy6m",
-        "outputId": "cbb3482d-bd7a-4e49-bfb5-506057e7a0b7"
+        "outputId": "45774c67-a49a-4100-f86a-2d3c34b060c5"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -102,7 +102,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 3
         }
       ]
     },
@@ -117,9 +117,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8aDfuBx5F1fq",
-        "outputId": "f43b4659-55b5-4c3d-952f-3a71a3faac66"
+        "outputId": "48df26e5-b65e-4a48-b995-3388567fa487"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,9 +151,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 363
         },
-        "outputId": "2d98a861-93e9-4e75-a383-508df183c38d"
+        "outputId": "f16db30b-f72e-4ff9-cf99-1e9823c15c0b"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -173,7 +173,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e5775677-1a55-4f3d-9e02-77a8692fe801\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-4ae60e88-5df6-4a2c-b7a4-28875164da03\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -264,7 +264,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e5775677-1a55-4f3d-9e02-77a8692fe801')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4ae60e88-5df6-4a2c-b7a4-28875164da03')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -316,12 +316,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-e5775677-1a55-4f3d-9e02-77a8692fe801 button.colab-df-convert');\n",
+              "        document.querySelector('#df-4ae60e88-5df6-4a2c-b7a4-28875164da03 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-e5775677-1a55-4f3d-9e02-77a8692fe801');\n",
+              "        const element = document.querySelector('#df-4ae60e88-5df6-4a2c-b7a4-28875164da03');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -341,8 +341,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-50881623-4f23-4f39-9ddb-bc761f904e07\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-50881623-4f23-4f39-9ddb-bc761f904e07')\"\n",
+              "<div id=\"df-c4e65ec8-af18-4141-afb8-01499e33c409\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c4e65ec8-af18-4141-afb8-01499e33c409')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -461,7 +461,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-50881623-4f23-4f39-9ddb-bc761f904e07 button');\n",
+              "        document.querySelector('#df-c4e65ec8-af18-4141-afb8-01499e33c409 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -478,7 +478,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 5
         }
       ]
     },
@@ -497,19 +497,19 @@
           "height": 447
         },
         "id": "BvBFtezt5QKM",
-        "outputId": "f3198864-0f68-451e-83f9-217a8c1e69fa"
+        "outputId": "399e3bb0-3a76-4991-c4f4-fc09ce40e146"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7972c1fd36a0>"
+              "<matplotlib.collections.PathCollection at 0x7eba52326140>"
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 6
         },
         {
           "output_type": "display_data",
@@ -551,9 +551,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-LBzXhrMkVId",
-        "outputId": "82544f19-872c-4bce-b277-a2e0adf6fa82"
+        "outputId": "02935265-db73-484c-eefa-59532822a3b9"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -563,7 +563,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 7
         }
       ]
     },
@@ -577,9 +577,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IzcJBNB9kdtz",
-        "outputId": "d05ae078-20ef-4fbe-8565-673592864fcc"
+        "outputId": "c125c6e3-9cb5-4fd5-adf7-e855af9dd96b"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -595,7 +595,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 8
         }
       ]
     },
@@ -615,9 +615,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pj8kmuZBkg6w",
-        "outputId": "f539e5d0-cddc-410a-d410-e987df350b8a"
+        "outputId": "b409adf6-2c6b-4e74-ecef-4e67271c84c5"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -653,9 +653,9 @@
           "height": 35
         },
         "id": "OZ-n7cJnlKVS",
-        "outputId": "938acdfe-7b58-45e0-ffd0-56a9bb2f5ca1"
+        "outputId": "3ded2216-4b80-4ade-d19b-246e5b143b9f"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -668,7 +668,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 10
         }
       ]
     },
@@ -682,9 +682,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ri1n21o-ldPv",
-        "outputId": "84937f1b-a09c-46c0-e424-be0dd745f22c"
+        "outputId": "21fbfb35-8bde-4f59-ec52-2d1b7b00a143"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -694,7 +694,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 11
         }
       ]
     },
@@ -708,7 +708,7 @@
       "metadata": {
         "id": "8WOJvxEulQdh"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -721,9 +721,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-Eqyx8DelkJD",
-        "outputId": "6c085785-c247-4e03-af8c-8aa86ff77163"
+        "outputId": "ffcbcfd5-fe76-4775-8554-f3a95dcea8d2"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -738,7 +738,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 13
         }
       ]
     },
@@ -752,9 +752,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1Vpcpxzsl0SO",
-        "outputId": "05e0fc58-a96c-4f6d-d552-fb9daa49987a"
+        "outputId": "c138e903-8477-47b8-bd79-54c71c28b590"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -764,7 +764,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 14
         }
       ]
     },
@@ -782,7 +782,7 @@
       "metadata": {
         "id": "N0rPWnktl0o8"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -795,9 +795,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0n85S9C2Aa02",
-        "outputId": "3489e90c-f8f3-4419-c889-ed2067b31fe8"
+        "outputId": "7e32ad52-79bf-465e-eb75-3492a620b320"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -807,7 +807,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 16
         }
       ]
     },
@@ -845,9 +845,9 @@
           "height": 35
         },
         "id": "_bXjqJmqB4ks",
-        "outputId": "de44ae5e-21a6-4aad-923c-1a2bc503278a"
+        "outputId": "411e5b49-959d-48db-ea91-a84556156e5c"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -860,7 +860,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 17
         }
       ]
     },
@@ -890,9 +890,15 @@
         "    self.layer_1 = nn.Linear(in_features=2, out_features=5) # takes in 2 features and upscales to 5 features\n",
         "    self.layer_2 = nn.Linear(in_features=5, out_features=1) # takes in 5 features from previous layer and outputs a single feature (same shape as y)\n",
         "\n",
+        "    # self.two_linear = nn.Sequential(\n",
+        "    #     nn.Linear(in_features=2, out_features=5),\n",
+        "    #     nn.Linear(in_features=5, out_features=1)\n",
+        "    # )\n",
+        "\n",
         "  # 3. Define a forward() method that outlines the forward pass\n",
         "  def forward(self, x):\n",
         "    return self.layer_2(self.layer_1(x)) # x -> layer_1 -> layer_2 -> output\n",
+        "    # return self.two_linear(x)\n",
         "\n",
         "# 4. Instantiate an instance of our model class and send it to the target device\n",
         "model_0 = CircleModelV0().to(device)\n",
@@ -903,9 +909,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9N9cv6t4IIvX",
-        "outputId": "db537532-b1b4-433d-db24-72d9b2c702a3"
+        "outputId": "dabf8ea0-6678-4e88-c88c-a924b6c00a0d"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -918,7 +924,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 18
         }
       ]
     },
@@ -932,9 +938,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T1yRp7ElJWG8",
-        "outputId": "d1e7b7bd-1a04-4d90-efc1-7d7eda1439c7"
+        "outputId": "2f4b5f06-e121-442f-c72a-3b708cfc8229"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -944,7 +950,123 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Let's replace the model above using nn.Sequential()\n",
+        "model_0 = nn.Sequential(\n",
+        "    nn.Linear(in_features=2, out_features=5),\n",
+        "    nn.Linear(in_features=5, out_features=1)\n",
+        ").to(device)\n",
+        "\n",
+        "model_0"
+      ],
+      "metadata": {
+        "id": "Lm-XA07WR4lH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9243560b-5a04-4d3b-da43-ad280d4348dd"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Sequential(\n",
+              "  (0): Linear(in_features=2, out_features=5, bias=True)\n",
+              "  (1): Linear(in_features=5, out_features=1, bias=True)\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model_0.state_dict()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OSOssJrvnfj4",
+        "outputId": "31a07dc5-9e11-4ce0-b160-bbb5ac1cf7f2"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "OrderedDict([('0.weight',\n",
+              "              tensor([[ 0.6126,  0.3030],\n",
+              "                      [ 0.6832,  0.0097],\n",
+              "                      [-0.5619, -0.4924],\n",
+              "                      [ 0.0244,  0.4686],\n",
+              "                      [-0.2190,  0.3074]], device='cuda:0')),\n",
+              "             ('0.bias',\n",
+              "              tensor([-0.4775, -0.5618,  0.3189, -0.4872,  0.7013], device='cuda:0')),\n",
+              "             ('1.weight',\n",
+              "              tensor([[-0.4270, -0.2922,  0.1197,  0.3021, -0.0266]], device='cuda:0')),\n",
+              "             ('1.bias', tensor([-0.0737], device='cuda:0'))])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Make predictions\n",
+        "with torch.inference_mode():\n",
+        "  untrained_preds = model_0(X_test.to(device))\n",
+        "print(f\"Length of predictions: {len(untrained_preds)}, Shape: {untrained_preds.shape}\")\n",
+        "print(f\"Length of test samples: {len(X_test)}, Shape: {X_test.shape}\")\n",
+        "print(f\"\\nFirst 10 predictions:\\n {untrained_preds[:10]}\")\n",
+        "print(f\"\\nFirst 10 labels:\\n {y_test[:10]}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yPWZ_cU5jhSP",
+        "outputId": "f9a69f88-dfa2-40c8-df20-378289e5536b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Length of predictions: 200, Shape: torch.Size([200, 1])\n",
+            "Length of test samples: 200, Shape: torch.Size([200, 2])\n",
+            "\n",
+            "First 10 predictions:\n",
+            " tensor([[ 0.3205],\n",
+            "        [ 0.1033],\n",
+            "        [ 0.5470],\n",
+            "        [ 0.2578],\n",
+            "        [ 0.0023],\n",
+            "        [-0.1261],\n",
+            "        [-0.3062],\n",
+            "        [-0.3613],\n",
+            "        [ 0.5696],\n",
+            "        [ 0.0827]], device='cuda:0')\n",
+            "\n",
+            "First 10 labels:\n",
+            " tensor([1., 0., 1., 0., 1., 1., 0., 0., 1., 0.])\n"
+          ]
         }
       ]
     },
@@ -952,7 +1074,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Lm-XA07WR4lH"
+        "id": "UT8OMdGvovV_"
       },
       "execution_count": null,
       "outputs": []
