Setup loss and optimizer

--- a/3_pytorch_classification.ipynb
+++ b/3_pytorch_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM9uMY/dwv4BwqX+38qQeP0",
+      "authorship_tag": "ABX9TyN5woATsfKracti2Hlgve13",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "CZH98HErE-Eo"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
       "metadata": {
         "id": "4FqclzRWFlnC"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -90,9 +90,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eQRArdk8Fy6m",
-        "outputId": "45774c67-a49a-4100-f86a-2d3c34b060c5"
+        "outputId": "b65d295a-5fa6-465d-a1be-d2205d8753b3"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -102,7 +102,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 4
         }
       ]
     },
@@ -117,9 +117,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8aDfuBx5F1fq",
-        "outputId": "48df26e5-b65e-4a48-b995-3388567fa487"
+        "outputId": "59dd61ee-f184-47b3-be59-55c3a291b199"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,9 +151,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 363
         },
-        "outputId": "f16db30b-f72e-4ff9-cf99-1e9823c15c0b"
+        "outputId": "d1474412-a0c6-493b-e30a-5759ab07de32"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -173,7 +173,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4ae60e88-5df6-4a2c-b7a4-28875164da03\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-650ffc8d-235d-4ffa-83ac-4db5a49e8a25\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -264,7 +264,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4ae60e88-5df6-4a2c-b7a4-28875164da03')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-650ffc8d-235d-4ffa-83ac-4db5a49e8a25')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -316,12 +316,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-4ae60e88-5df6-4a2c-b7a4-28875164da03 button.colab-df-convert');\n",
+              "        document.querySelector('#df-650ffc8d-235d-4ffa-83ac-4db5a49e8a25 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-4ae60e88-5df6-4a2c-b7a4-28875164da03');\n",
+              "        const element = document.querySelector('#df-650ffc8d-235d-4ffa-83ac-4db5a49e8a25');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -341,8 +341,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-c4e65ec8-af18-4141-afb8-01499e33c409\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c4e65ec8-af18-4141-afb8-01499e33c409')\"\n",
+              "<div id=\"df-566f3564-6fcb-47d0-9b59-1e9ee6edc6d4\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-566f3564-6fcb-47d0-9b59-1e9ee6edc6d4')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -461,7 +461,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-c4e65ec8-af18-4141-afb8-01499e33c409 button');\n",
+              "        document.querySelector('#df-566f3564-6fcb-47d0-9b59-1e9ee6edc6d4 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -478,7 +478,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
@@ -497,19 +497,19 @@
           "height": 447
         },
         "id": "BvBFtezt5QKM",
-        "outputId": "399e3bb0-3a76-4991-c4f4-fc09ce40e146"
+        "outputId": "a8cfa251-256b-4b7f-e322-d9b9fb4be33b"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7eba52326140>"
+              "<matplotlib.collections.PathCollection at 0x78a38b823820>"
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 7
         },
         {
           "output_type": "display_data",
@@ -551,9 +551,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-LBzXhrMkVId",
-        "outputId": "02935265-db73-484c-eefa-59532822a3b9"
+        "outputId": "ee404adc-0e6f-4db2-ffe8-ca488376fbca"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -563,7 +563,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 8
         }
       ]
     },
@@ -577,9 +577,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IzcJBNB9kdtz",
-        "outputId": "c125c6e3-9cb5-4fd5-adf7-e855af9dd96b"
+        "outputId": "1987a917-8a51-4d2a-aed2-4daf20b73392"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -595,7 +595,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 9
         }
       ]
     },
@@ -615,9 +615,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pj8kmuZBkg6w",
-        "outputId": "b409adf6-2c6b-4e74-ecef-4e67271c84c5"
+        "outputId": "796e38ea-d8f4-4e51-cb45-3de24c045f7b"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -653,9 +653,9 @@
           "height": 35
         },
         "id": "OZ-n7cJnlKVS",
-        "outputId": "3ded2216-4b80-4ade-d19b-246e5b143b9f"
+        "outputId": "00566047-3d85-464a-bbf0-c31fa005338c"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -668,7 +668,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 11
         }
       ]
     },
@@ -682,9 +682,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ri1n21o-ldPv",
-        "outputId": "21fbfb35-8bde-4f59-ec52-2d1b7b00a143"
+        "outputId": "0dfb044b-4355-473f-9912-7ce190299bd2"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -694,7 +694,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 12
         }
       ]
     },
@@ -708,7 +708,7 @@
       "metadata": {
         "id": "8WOJvxEulQdh"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -721,9 +721,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-Eqyx8DelkJD",
-        "outputId": "ffcbcfd5-fe76-4775-8554-f3a95dcea8d2"
+        "outputId": "20d48202-4dc3-42b4-c429-cbb939491721"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -738,7 +738,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 14
         }
       ]
     },
@@ -752,9 +752,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1Vpcpxzsl0SO",
-        "outputId": "c138e903-8477-47b8-bd79-54c71c28b590"
+        "outputId": "66864b6d-6dff-48f2-82ce-a35b7a45644e"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -764,7 +764,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 15
         }
       ]
     },
@@ -782,7 +782,7 @@
       "metadata": {
         "id": "N0rPWnktl0o8"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -795,9 +795,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0n85S9C2Aa02",
-        "outputId": "7e32ad52-79bf-465e-eb75-3492a620b320"
+        "outputId": "9659f47c-cabf-41bd-ee89-29babd6b0784"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -807,7 +807,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 17
         }
       ]
     },
@@ -845,9 +845,9 @@
           "height": 35
         },
         "id": "_bXjqJmqB4ks",
-        "outputId": "411e5b49-959d-48db-ea91-a84556156e5c"
+        "outputId": "3e18669a-333d-4093-a2c9-6401401c8564"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -860,7 +860,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 18
         }
       ]
     },
@@ -909,9 +909,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9N9cv6t4IIvX",
-        "outputId": "dabf8ea0-6678-4e88-c88c-a924b6c00a0d"
+        "outputId": "e67ee1b8-c1a7-4a06-99f4-4a3b8e39887b"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -924,7 +924,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 19
         }
       ]
     },
@@ -938,9 +938,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T1yRp7ElJWG8",
-        "outputId": "2f4b5f06-e121-442f-c72a-3b708cfc8229"
+        "outputId": "7ff4b1a4-f199-442d-9a78-d4902fd383c3"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -950,7 +950,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 20
         }
       ]
     },
@@ -970,9 +970,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9243560b-5a04-4d3b-da43-ad280d4348dd"
+        "outputId": "695dd200-6439-4040-d268-4bc4585cca64"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -999,25 +999,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OSOssJrvnfj4",
-        "outputId": "31a07dc5-9e11-4ce0-b160-bbb5ac1cf7f2"
+        "outputId": "f91feb31-3598-4cb0-d164-cda7533d093c"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "OrderedDict([('0.weight',\n",
-              "              tensor([[ 0.6126,  0.3030],\n",
-              "                      [ 0.6832,  0.0097],\n",
-              "                      [-0.5619, -0.4924],\n",
-              "                      [ 0.0244,  0.4686],\n",
-              "                      [-0.2190,  0.3074]], device='cuda:0')),\n",
+              "              tensor([[ 0.6809,  0.5135],\n",
+              "                      [-0.6466,  0.3276],\n",
+              "                      [ 0.3394, -0.3795],\n",
+              "                      [-0.1207, -0.0545],\n",
+              "                      [-0.1046,  0.3043]], device='cuda:0')),\n",
               "             ('0.bias',\n",
-              "              tensor([-0.4775, -0.5618,  0.3189, -0.4872,  0.7013], device='cuda:0')),\n",
+              "              tensor([-0.6434, -0.6185, -0.4137, -0.5139,  0.1854], device='cuda:0')),\n",
               "             ('1.weight',\n",
-              "              tensor([[-0.4270, -0.2922,  0.1197,  0.3021, -0.0266]], device='cuda:0')),\n",
-              "             ('1.bias', tensor([-0.0737], device='cuda:0'))])"
+              "              tensor([[-0.3272,  0.3920, -0.2624,  0.3554, -0.0423]], device='cuda:0')),\n",
+              "             ('1.bias', tensor([-0.0160], device='cuda:0'))])"
             ]
           },
           "metadata": {},
@@ -1041,9 +1041,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yPWZ_cU5jhSP",
-        "outputId": "f9a69f88-dfa2-40c8-df20-378289e5536b"
+        "outputId": "4e63f82f-cd73-4af2-a20b-6a3ed77d7604"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -1053,16 +1053,16 @@
             "Length of test samples: 200, Shape: torch.Size([200, 2])\n",
             "\n",
             "First 10 predictions:\n",
-            " tensor([[ 0.3205],\n",
-            "        [ 0.1033],\n",
-            "        [ 0.5470],\n",
-            "        [ 0.2578],\n",
-            "        [ 0.0023],\n",
-            "        [-0.1261],\n",
-            "        [-0.3062],\n",
-            "        [-0.3613],\n",
-            "        [ 0.5696],\n",
-            "        [ 0.0827]], device='cuda:0')\n",
+            " tensor([[ 0.1157],\n",
+            "        [-0.1125],\n",
+            "        [ 0.2859],\n",
+            "        [ 0.0692],\n",
+            "        [-0.3934],\n",
+            "        [-0.5274],\n",
+            "        [-0.6315],\n",
+            "        [-0.7304],\n",
+            "        [ 0.3143],\n",
+            "        [-0.1353]], device='cuda:0')\n",
             "\n",
             "First 10 labels:\n",
             " tensor([1., 0., 1., 0., 1., 1., 0., 0., 1., 0.])\n"
@@ -1071,10 +1071,74 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 2.1 Setup loss function and optimizer\n",
+        "\n",
+        "Which loss function or optimizer should you use?\n",
+        "\n",
+        "This is problem specific.\n",
+        "\n",
+        "For example for regression you might want MAE or MSE (mean absolute error or mean squared error).\n",
+        "\n",
+        "For classification you might want Binary cross entropy or categorical cross entropy (cross entropy).\n",
+        "\n",
+        "As a reminder, the loss function measure how *wrong* your models predictions are.\n",
+        "\n",
+        "And for optimizers, two of the most common and useful are SGD and Adam, however PyTorch has many built-in options.\n",
+        "\n",
+        "* For some common choice of loss functions and optimizers - https://www.learnpytorch.io/02_pytorch_classification/#21-setup-loss-function-and-optimizer\n",
+        "* For the loss function we're going to use `torch.nn.BCEWithLogitsLoss()`, for more on what binart cross entropy (BCE) is, check out this article - https://towardsdatascience.com/understanding-binary-cross-entropy-log-loss-a-visual-explanation-a3ac6025181a\n",
+        "* For a definition on what a logit is in deep learning - https://stackoverflow.com/questions/41455101/what-is-the-meaning-of-the-word-logits-in-tensorflow\n",
+        "* For different optimizers see `torch.optim`"
+      ],
+      "metadata": {
+        "id": "UT8OMdGvovV_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Setup the loss function\n",
+        "# loss_fn = nn.BCELoss() # BCELoss = requires inputs to have gone through the sigmoid activation function prior input to BCELoss\n",
+        "loss_fn = nn.BCEWithLogitsLoss() # BCEWithLogitsLoss = sigmoid activation function built-in\n",
+        "\n",
+        "# nn.Sequential(\n",
+        "#     nn.Sigmoid(),\n",
+        "#     nn.BCELoss()\n",
+        "# ) ## This is equal to BCEWithLogitsLoss\n",
+        "\n",
+        "# Setup the optimizer\n",
+        "optimizer = torch.optim.SGD(params=model_0.parameters(),\n",
+        "                            lr=0.1)"
+      ],
+      "metadata": {
+        "id": "c3rk5CaVQi8G"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculate accuracy - out of 100 examples, what percentage does our model get right?\n",
+        "\n",
+        "def accuracy_fn(y_true, y_pred):\n",
+        "  correct = torch.eq(y_true, y_pred).sum().item() # torch.eq() calculates where two tensors are equal\n",
+        "  acc = (correct / len(y_pred)) * 100\n",
+        "  return acc"
+      ],
+      "metadata": {
+        "id": "koIY6roYWzr1"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "UT8OMdGvovV_"
+        "id": "BeVPoFzUW0Cp"
       },
       "execution_count": null,
       "outputs": []
